# janim-stdio-interact

./: .gitignore  LICENSE  README.md  README_zh_CN.md  pyproject.toml
src/janim_stdio_i/: __main__.py  cli.py  listener.py  logger.py  viewer.py
src/janim_stdio_i/locale/: __init__.py  compile.py  gettext.py  i18n.py  intl.py
src/janim_stdio_i/locale/source/: __main__.pot  cli.pot  listener.pot
src/janim_stdio_i/locale/zh_CN/LC_MESSAGES/: __main__.mo  __main__.po  cli.mo  cli.po  listener.mo  listener.po
src/janim_stdio_interact/: __init__.py  __main__.py  cli.py  controller.py  listener.py  viewer.py
src/janim_stdio_interact/locale/: __init__.py  compile.py  gettext.py  i18n.py  intl.py
src/janim_stdio_interact/locale/source/: __main__.pot  cli.pot  listener.pot
src/janim_stdio_interact/locale/zh_CN/LC_MESSAGES/: __main__.po  cli.mo  cli.po  listener.po
