[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "janim-stdio-interact"
dynamic = ["version", "description"]
readme = "README.md"
authors = [
    { name = "jkjkil4", email = "1173374788@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "janim[gui]",
]

[project.scripts]
janim-stdio-i = "janim_stdio_interact.__main__:main"
